# flexi-dlt

./: README.md  dockerfile  makefile  pyproject.toml  requirements.txt
.dlt/: secrets_example.toml
.github/workflows/: validate.yml
entrypoint/: __main__.py  config.py  destinations.py  errors.py  pipeline.py  sources.py  src_hockey.py  src_rba.py
