[project]
name = "FlexiDLT"
version = "0.1.0"
description = "Easily extract and load data from and too multiple databases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt[duckdb,postgres,snowflake]~=1.1.0",
    "duckdb~=1.1.0",
    "psutil~=6.0.0",
    "pymysql~=1.1.1",
    "python-dotenv~=1.0.1",
    "sqlalchemy~=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
