[project]
name = "FlexiDLT"
version = "0.1.0"
description = "Easily extract and load data from and too multiple databases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt[duckdb,postgres,snowflake,parquet]~=1.1.0",
    "duckdb~=1.1.0",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "psutil~=6.0.0",
    "pymysql~=1.1.1",
    "python-dotenv~=1.0.1",
    "sqlalchemy~=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
    "pytest>=8.3.1",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
